# selkies-stash

./: README.md  __main__.py  build.sh  gstwebrtc_app.py  index.html  screen_cap_example.py
module/: CMakeLists.txt  screen_capture_module.cpp
rust/: Cargo.toml
rust/src/: main.rs
